Use URI#create instead of URI constructor where feasible in spring-webflux